# billions

./: .gitignore  Billions.hxproj  build_c.hxml  build_common.hxml  build_hl.hxml  build_js.hxml  compile_c.bat
assets_source/font/: milimoji.bmfc
res/.tmp/font/: milimoji.bfnt
res/font/: milimoji.fnt
res/tiles/: main.json
src/: CustomPreloader.hx  Main.hx  import.hx
src/collision/: Collider.hx  ColliderPool.hx  CollisionResult.hx  ICollisionResult.hx  Linker.hx  LinkerPool.hx  LinkerPosition.hx  Partition.hx
src/filter/: ColorMatrixFilter.hx  StripFilter.hx
src/game/animation/: Animation.hx  AnimationCommand.hx  AnimationProcessor.hx  AnimationResolver.hx  IAnimation.hx
src/game/asset/: AssetManager.hx  TileInfo.hx
src/game/asset/tile/: ChunkPosition.hx  MainTileId.hx  Slice9.hx  TileSheet.hx  TileSource.hx
src/game/constants/: GameConstants.hx  ViewConstants.hx
src/game/page/game/: GamePage.hx  GamePageView.hx
src/game/root/: EmptyPage.hx  EmptyView.hx  InputKind.hx  InputManager.hx  RootLogic.hx  RootView.hx
src/game/save/: BrowserDatabase.hx  FileDatabase.hx  IDatabase.hx  InitialLoadedData.hx  InputSetting.hx  SaveManager.hx  SaveSlot.hx  WindowSetting.hx
src/game/sound/: SoundPlayer.hx
src/link/: Next.hx
src/tool/: AbstractEnumTools.hx  CustomEasing.hx  GeometryTools.hx  IntTools.hx  XorShift.hx
src/viewTree/core/: DisposeDispatcher.hx  DisposeDispatcherImpl.hx  DrawContext.hx  Page.hx  View.hx  ViewReference.hx  ViewTree.hx  ViewableLogic.hx  ViewableLogicTools.hx
tool/image/: Cargo.toml  run.bat
tool/image/src/: main.rs
(+14 files in other folders)
